# OpenCL_TBB_MulticoreProgramming

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Framework/: Renderer.cpp  WindowManager.h  stb_image.cpp
Objects/: Cell.cpp  Cell.h  Grid.cpp  Grid.h
OpenCL_CPU&GPU_SVM/: CMakeLists.txt  README.txt  main.cpp
OpenCL_CPU&GPU_SVM/Framework/: CL_Tools.h  Renderer.h
OpenCL_CPU&GPU_SVM/Kernels/: gpu_kernels.cl
OpenCL_CPU&GPU_SVM/Objects/: Grid.cpp  Grid.h
OpenCL_GPU/: CMakeLists.txt  README.txt  main.cpp
OpenCL_GPU/Framework/: CL_Tools.h
OpenCL_GPU/Kernels/: backup.cl  gpu_kernels.cl
OpenCL_GPU/Objects/: Cell.cpp  Cell.h  Grid.cpp  Grid.h
Shaders/: frag_shader.glsl  vertex_shader.glsl
TBB/: .main.cpp.kate-swp  CMakeLists.txt  README.txt
TBB/Framework/: Shader.h  WindowManager.cpp
TBB/Objects/: Cell.cpp  Cell.h  Grid.h
